--- a/FashinistaApp/app/src/main/res/layout/content_acceuil.xml
+++ b/FashinistaApp/app/src/main/res/layout/content_acceuil.xml
@@ -13,91 +13,11 @@
     tools:showIn="@layout/app_bar_acceuil">
 
 
-
     <FrameLayout
         android:id="@+id/content_frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></FrameLayout>
-    <TextView
-        android:id="@+id/txt_sexe"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sexe :"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        />
-
-    <CheckBox
-        android:id="@+id/check_homme"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/txt_sexe"
-        android:layout_marginLeft="100dp"
-        android:text="Homme"/>
-
-    <CheckBox
-        android:id="@+id/check_femme"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/txt_sexe"
-        android:layout_marginLeft="100dp"
-        android:text="Femme"
-        android:layout_below="@+id/check_homme"
-        android:layout_marginTop="5dp"/>
-
-
-    <TextView
-        android:id="@+id/txt_voile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Femme voilé :"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        android:layout_below="@+id/check_femme"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="oui"
-        android:id="@+id/checkBox"
-        android:layout_alignTop="@+id/txt_voile"
-        android:layout_alignLeft="@+id/check_femme"
-        android:layout_alignStart="@+id/check_femme"
-        android:layout_alignBottom="@+id/txt_voile"
-        android:layout_alignRight="@+id/check_homme"
-        android:layout_alignEnd="@+id/check_homme" />
-
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Non"
-        android:id="@+id/checkBox2"
-        android:layout_below="@+id/check_femme"
-        android:layout_toRightOf="@+id/check_femme"
-        android:layout_toEndOf="@+id/check_femme" />
-
-    <TextView
-        android:id="@+id/txt_event"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Evenement:"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        android:layout_below="@+id/checkBox2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/listView"
-        android:layout_below="@+id/txt_event"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
+        android:layout_height="match_parent">
+    </FrameLayout>
 
 
 
