--- a/FashinistaApp/app/src/main/res/layout/activity_acceuil.xml
+++ b/FashinistaApp/app/src/main/res/layout/activity_acceuil.xml
@@ -22,4 +22,16 @@
         app:headerLayout="@layout/nav_header_acceuil"
         app:menu="@menu/activity_acceuil_drawer" />
 
+
+
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/listView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+
 </android.support.v4.widget.DrawerLayout>
