--- a/FashinistaApp/app/src/main/res/layout/activity_main2.xml
+++ b/FashinistaApp/app/src/main/res/layout/activity_main2.xml
@@ -10,59 +10,30 @@
     tools:context="tn.ines.fashinistaapp.Main2Activity">
 
 
-    <TextView
-        android:id="@+id/txt_sexe"
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/content_frame">
+    </FrameLayout>
+
+
+        <ImageView
+            android:src="@drawable/image4ete"
+            android:layout_width="367dp"
+            android:layout_height="367dp"
+            android:id="@+id/imageView2"
+            android:layout_gravity="left|bottom" />
+
+
+    <ImageView
+        android:src="@drawable/image1ete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sexe :"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        android:layout_marginTop="50dp"
-        />
-
-
-    <CheckBox
-        android:id="@+id/check_homme"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/txt_sexe"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="50dp"
-        android:text="Homme"/>
-
-    <CheckBox
-        android:id="@+id/check_femme"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/check_homme"
-        android:text="Femme"
-        android:layout_marginTop="50dp"
-        android:layout_gravity="right|top" />
-
-    <TextView
-        android:id="@+id/txt_event"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:text="Evenement:"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        android:layout_marginTop="45dp"
-        android:layout_below="@+id/check_homme"
+        android:id="@+id/imageView"
+        android:layout_alignRight="@+id/content_frame"
+        android:layout_alignEnd="@+id/content_frame"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
-
-
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:id="@+id/listView"
-        android:layout_below="@+id/txt_event"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-
-
-
 
 
 </RelativeLayout>
