--- a/FashinistaApp/app/src/main/res/layout/activity_main.xml
+++ b/FashinistaApp/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="FashiNista"
+            android:text="FashiONista"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:textSize="50sp"
