--- a/FashinistaApp/app/src/main/res/layout/activity_inscrire.xml
+++ b/FashinistaApp/app/src/main/res/layout/activity_inscrire.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="tn.ines.fashinistaapp.Inscrire">
+    tools:context="tn.ines.fashinistaapp.Inscrire"
+    android:background="@drawable/a">
 
 
     <TextView
@@ -39,7 +40,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/edit2"
-        android:layout_below="@id/txt2"/>
+        android:layout_below="@id/txt2"
+        android:inputType="textPassword"/>
 
 
 
