--- a/FashinistaApp/app/src/main/res/layout/content_acceuil.xml
+++ b/FashinistaApp/app/src/main/res/layout/content_acceuil.xml
@@ -10,7 +10,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="tn.ines.fashinistaapp.Acceuil"
-    tools:showIn="@layout/app_bar_acceuil">
+    tools:showIn="@layout/app_bar_acceuil"
+    android:background="@drawable/a">
 
 
     <FrameLayout
@@ -27,27 +28,60 @@
         android:text="Sexe :"
         android:textSize="25sp"
         android:textStyle="bold"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="70dp"
         />
-
 
     <CheckBox
         android:id="@+id/check_homme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/txt_sexe"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="50dp"
-        android:text="Homme"/>
+        android:layout_marginLeft="100dp"
+        android:text="Homme"
+        android:layout_marginTop="70dp"/>
 
     <CheckBox
         android:id="@+id/check_femme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/check_homme"
+        android:layout_toRightOf="@+id/txt_sexe"
+        android:layout_marginLeft="100dp"
         android:text="Femme"
-        android:layout_marginTop="50dp"
-        android:layout_gravity="right|top" />
+        android:layout_below="@+id/check_homme"
+        android:layout_marginTop="5dp"/>
+
+
+    <TextView
+        android:id="@+id/txt_voile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Femme voilé :"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:layout_below="@+id/check_femme"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="oui"
+        android:id="@+id/checkBox"
+        android:layout_alignTop="@+id/txt_voile"
+        android:layout_alignLeft="@+id/check_femme"
+        android:layout_alignStart="@+id/check_femme"
+        android:layout_alignBottom="@+id/txt_voile"
+        android:layout_alignRight="@+id/check_homme"
+        android:layout_alignEnd="@+id/check_homme" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Non"
+        android:id="@+id/checkBox2"
+        android:layout_below="@+id/check_femme"
+        android:layout_toRightOf="@+id/check_femme"
+        android:layout_toEndOf="@+id/check_femme" />
 
     <TextView
         android:id="@+id/txt_event"
@@ -56,8 +90,7 @@
         android:text="Evenement:"
         android:textSize="25sp"
         android:textStyle="bold"
-        android:layout_marginTop="45dp"
-        android:layout_below="@+id/check_homme"
+        android:layout_below="@+id/checkBox2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -69,6 +102,7 @@
         android:layout_below="@+id/txt_event"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
 
 
 
